--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Dicee</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1465e7da9e.js" crossorigin="anonymous"></script>
@@ -10,7 +11,7 @@
   <body>
     <script src="index.js" charset="utf-8"></script>
     <div class="container">
-      <h1>Refresh Me</h1>
+      <h1>Lets roll the dice!</h1>
 
       <div class="dice">
         <p>Player 1</p>
@@ -21,10 +22,19 @@
         <p>Player 2</p>
         <img class="img2" src="S:\web dev\Dicee Challenge - Starting Files\images\dice1.png">
       </div>
+      <div >
 
+
+<button type="button" class="btn btn-danger">Click here to generate results</button>
+</div>
+<div class="last">
+  <h3> </h3>
+</div>
     </div>
 
-  <script src="index.js" charset="utf-8"></script>
+
+
+   <script src="index.js" charset="utf-8"></script>
   </body>
 
   <footer>
